<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- 공통 dependency는 pom.xml 파일을 배포하여 관리 -->
	<parent>
		<groupId>com.ntels</groupId>
		<artifactId>nisf-core-new</artifactId>
		<version>0.0.1-SNAPSHOT</version>
		<relativePath>parent/pom.xml</relativePath>
	</parent>

	<artifactId>one</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<packaging>war</packaging>
	
	<build> 
		<finalName>ROOT</finalName>
		<resources>

			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*.properties</include>
					<include>**/*.xml</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.properties</include>
					<include>**/*.xml</include>
				</includes> 
			</resource>
		</resources>

		<plugins> 
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>2.2</version>
				<configuration>
					<port>7080</port>
					<path>/</path>
					<contextFile>src/main/webapp/META-INF/context.xml</contextFile>
					<systemProperties>
						<JAVA_OPTS>-Xms256m -Xmx1024m -XX:MaxPermSize=512m</JAVA_OPTS>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin> 
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<properties>
		<tiles.version>3.0.1</tiles.version>
		<oracle.version>11.1.0.7.0</oracle.version>
		<mysql.version>5.1.22</mysql.version>
	</properties>
    <repositories>
        <repository>
            <id>public</id>
            <url>http://192.168.10.138:9081/nexus/content/groups/public/</url>
     	</repository>       
    </repositories>
    
    <pluginRepositories>
        <pluginRepository>
                <id>Central</id>
                <url>http://192.168.10.138:9081/nexus/content/repositories/central/</url>
                <layout>default</layout>
                <snapshots>
                     <enabled>false</enabled>
                </snapshots>
                <releases>
                     <updatePolicy>never</updatePolicy>
                </releases>
        </pluginRepository>
    </pluginRepositories>


	<dependencies>
		<!-- nisf-core -->
		<!-- 외부 배포일 경우 nisf-core 는 jar 파일 형태로 배포 -->
		<dependency>
			<groupId>com.ntels</groupId>
			<artifactId>nisf-core</artifactId>
			<version>1.0.4</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/nisf-core-1.0.4.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.ntels</groupId>
			<artifactId>ciper</artifactId>
			<version>1.0.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/nisf-ciper-1.0.0.jar</systemPath>
		</dependency>

		<!-- tiles 2 -->
		<dependency>
			<groupId>org.apache.tiles</groupId>
			<artifactId>tiles-core</artifactId>
			<version>${tiles.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.tiles</groupId>
			<artifactId>tiles-jsp</artifactId>
			<version>${tiles.version}</version>
		</dependency>

		<!-- SQL Log -->
		<dependency>
		  <groupId>org.lazyluke</groupId>
		  <artifactId>log4jdbc-remix</artifactId>
		  <version>0.2.7</version>
		</dependency>
		
		<!-- MySQL -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql.version}</version>
		</dependency>
		
		<!-- Oracle -->
        <dependency>
          <groupId>com.oracle</groupId>
          <artifactId>ojdbc14</artifactId>
          <version>10.2.0.4.0</version>
        </dependency> 
				
		<!-- Tibero -->
		<dependency>
			<groupId>com.timax</groupId>
			<artifactId>tbjdbc1.6</artifactId>
			<version>5.0.72588M</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/tibero5-jdbc.jar</systemPath>
		</dependency>	
		
		<!-- smarteditor -->
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.7</version>
		</dependency>
		 
		<!-- Servlet -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.0.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>jsp-api</artifactId>
            <version>2.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jstl</artifactId>
            <version>1.2</version>
        </dependency>

        <!-- AspectJ -->
        <dependency> 
            <groupId>org.aspectj</groupId> 
            <artifactId>aspectjrt</artifactId>
            <version>1.6.10</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.0</version> 
        </dependency>
        
       <!-- Spring Integration -->
        <dependency>
            <groupId>org.springframework.integration</groupId>
            <artifactId>spring-integration-http</artifactId>
            <version>4.0.8.RELEASE</version>
            <exclusions>
                <exclusion>
                    <groupId>xerces</groupId>
                    <artifactId>xercesImpl</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
       
       <!-- apache httpcomponents --> 
        <dependency>
          <groupId>org.apache.httpcomponents</groupId>
          <artifactId>httpclient</artifactId>
          <version>4.5.2</version>
        </dependency>
	</dependencies>
</project>
